Add Analytics link to navigation menu

--- a/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
@@ -83,6 +83,12 @@
                 <li class="nav-item"><a class="nav-link" href="/#projects"        data-nav="projects">Projects</a></li>
                 <li class="nav-item"><a class="nav-link" href="/#research"        data-nav="research">Research</a></li>
                 <li class="nav-item"><a class="nav-link" href="/#resume"          data-nav="resume">Resume</a></li>
+
+                <!-- ✅ Added Analytics link -->
+                <li class="nav-item">
+                  <a class="nav-link" asp-controller="Analytics" asp-action="Index">Analytics</a>
+                </li>
+
                 <li class="nav-item">
                   <a class="btn btn-warning btn-sm ms-3 shadow btn-liquid" href="/#contact" data-nav="contact">📩 Contact</a>
                 </li>
